--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -153,11 +153,11 @@ button{
 .nav__logo {
   display: flex;
   align-items: center;
-  column-gap: 5rem;
+  column-gap: .5rem;
   font-weight: var(--font-medium);
 }
 
-.nav_-logo-img {
+.nav__logo-img {
   width: 1.25rem;
 }
 
@@ -313,7 +313,7 @@ button{
   opacity: 1;
 }
 
-.swiper-pagination-horizontal.swiper-pagination-bullet .swiper-pagination-bullet {
+.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
   margin: 0 .5rem;
 }
 
