--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -230,7 +230,20 @@ button{
 }
 
 /* Active link */
+.active-link {
+  position: relative;
+}
 
+.active-link:before {
+  content: '';
+  position: absolute;
+  bottom: -.75rem;
+  left: 45%;
+  width: 5px;
+  height: 5px;
+  background-color: var(--title-color);
+  border-radius: 50%;
+}
 
 /*=============== HOME ===============*/
 .home__content {
@@ -692,13 +705,44 @@ overflow: hidden;
 }
 
 /*=============== SCROLL UP ===============*/
+.scrollup {
+  position: fixed;
+  background: var(--container-color);
+  right: 1rem;
+  bottom: 5rem;
+  display: inline-flex;
+  padding: .3rem;
+  border-radius: .25rem;
+  z-index: var(--z-tooltip);
+  opacity: .8;
+  transition: .4;
+}
 
+.scrollup__icon {
+  font-size: 1.25rem;
+  color: var(--title-color);
+}
+
+.scrollup:hover {
+  background: var(--container-color);
+  opacity: 1;
+}
 
 /* Show Scroll Up*/
-
+.show-scroll {
+  bottom: 3rem;
+}
 
 /*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar {
+  width: 0.6rem;
+  background: #413e3e;
+}
 
+::-webkit-scrollbar-thumb {
+  background: #272525;
+  border-radius: .5rem;
+}
 
 /*===============  BREAKPOINTS ===============*/
 /* For small devices */
